--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <h4 class="w_stat">Verified Buyer</h4>
             </div>
           </div>
-          <div class="lead quote">
+          <div class="quote">
             "Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
             them to everyone!"
